# openstride

./: .clang-format  .clangd  .envrc  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Kconfig  Makefile  README.md  pyproject.toml  west.yml
.github/workflows/: docs.yml
apps/sensor/src/: main.c
apps/sensor/src/algo/foot/: stride.c  stride.h  stride_eskf.c  stride_eskf.h  stride_mahony.c  stride_mahony.h
apps/sensor/src/battery/: battery.c  battery.h
apps/sensor/src/imu/: imu.c  imu.h
apps/sensor/src/sdm/: sdm_data.h  sdm_encode.c  sdm_encode.h
apps/sensor/src/transport/: transport.c  transport.h
apps/sensor/src/transport/ant/: ant_transport.c  ant_transport.h
apps/sensor/src/transport/ble/: imu_stream.c  imu_stream.h  rsc_service.c  rsc_service.h
boards/: xiao_ble_nrf52840_sense.conf  xiao_ble_nrf52840_sense.overlay  xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
docs/: astro.config.mjs  package-lock.json
docs/src/content/docs/: hardware.md  index.mdx
docs/src/content/docs/setup/: ant-plus.mdx  build-and-flash.mdx  environment.mdx  index.mdx  simulation.mdx  workspace.mdx
scripts/: capture_rsc.py  imu_recv.py  recovery.py
tests/unit/: CMakeLists.txt  testcase.yaml
tests/unit/src/: test_sdm.c
